# crash_monitor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FIXME.md  LICENSE  Makefile  README.md  SECURITY.md  build.rs  crash_monitor.entitlements  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-audit.yml
crates/crash-monitor-cli/: Cargo.toml
crates/crash-monitor-cli/src/: lib.rs  main.rs
crates/crash-report-core/: Cargo.toml
crates/crash-report-core/src/: lib.rs
crates/crash_dialog_contract/: Cargo.toml
crates/crash_dialog_contract/src/: lib.rs
crates/crash_dialog_macos/: Cargo.toml
crates/crash_dialog_macos/src/: dialog.rs  main.rs
crates/crash_dialog_mock/: Cargo.toml
crates/crash_dialog_mock/src/: main.rs
docs/: architecture.md  configuration.md  crate-boundaries.md  dependency-maintenance.md  development.md  integration.md  pipeline.md  privacy.md  release-artifacts.md  release-checklist.md  reports.md  shared-memory.md  troubleshooting.md
packaging/: production-binaries.txt
producer/: CMakeLists.txt  README.md  crash_monitor_producer.h
schema/: crash_shm.h  crash_shm_atomic.h
scripts/: package-release.sh  resolve-sign-identity.sh  verify-release.sh
src/: config.rs  errors.rs  event_loop.rs  event_source.rs  lib.rs  main.rs  telemetry.rs  test_hooks.rs  watchdog.rs
src/cli/: analyze.rs  mod.rs  stack.rs  symbolicate.rs
src/collectors/: attachment.rs  breadcrumb.rs  context.rs  dylib.rs  environment.rs  memory.rs  mod.rs  process_output.rs  screenshot.rs  thread.rs
src/filters/: disk_space.rs  mod.rs  rate_limiter.rs
src/notifiers/: console.rs  mod.rs  system.rs
src/pipeline/: artifact.rs  capture_isolation.rs  defaults.rs  mod.rs  report.rs  safety.rs  traits.rs  types.rs  worker.rs
src/platform/: mod.rs  task_control.rs
src/platform/macos/: child_output.rs  exceptions.rs  memory.rs  mod.rs  thread.rs  types.rs
src/platform/macos/ffi/: capture_spawn.rs  exceptions.rs  memory.rs  mod.rs  shm.rs  spawn.rs  task.rs  thread.rs  types.rs
src/platform/mock/: mod.rs
src/postprocessors/: feedback.rs  log_rotator.rs  mod.rs  move_to_sent.rs  png_converter.rs  raw_cleanup.rs  retention.rs  session_recorder.rs  zip_archiver.rs
src/preprocessors/: build_info.rs  duplicate.rs  fingerprint.rs  mod.rs  report_formatter.rs  sanitizer.rs  session.rs  symbolicate.rs
src/shm/: mod.rs  reader.rs  types.rs
src/utils/: mod.rs  paths.rs  terminal.rs  vm_tags.rs
tests/e2e/: e2e_tests.rs
tests/e2e/fixtures/: crash_app.c  producer_sdk_contract.c  shm_atomic_contract.c
tests/fixtures/: report_v1_minimal.json
tests/integration/: alarm_timeout.rs  capture_isolation_test.rs  cli_analyze_test.rs  cli_feedback_test.rs  cli_stack_test.rs  cli_symbolicate_test.rs  cli_zip_test.rs  event_loop_test.rs  panic_strategy.rs  plugin_timeout.rs  shm_round_trip.rs  shm_validation_failure.rs
tests/unit/: config_tests.rs  event_source_tests.rs  watchdog_tests.rs
tests/unit/cli/: analyze_tests.rs  stack_tests.rs  symbolicate_tests.rs
tests/unit/collectors/: dylib_tests.rs  environment_tests.rs  memory_tests.rs  thread_tests.rs
tests/unit/filters/: disk_space_tests.rs  rate_limiter_tests.rs
tests/unit/notifiers/: console_tests.rs  system_tests.rs
tests/unit/pipeline/: mod_tests.rs  report_tests.rs  safety_tests.rs  types_tests.rs
tests/unit/platform/macos/: exceptions_tests.rs  memory_tests.rs  thread_tests.rs  types_tests.rs
tests/unit/postprocessors/: feedback_tests.rs  log_rotator_tests.rs  move_to_sent_tests.rs  png_converter_tests.rs  raw_cleanup_tests.rs  retention_tests.rs  session_recorder_tests.rs  zip_archiver_tests.rs
tests/unit/preprocessors/: build_info_tests.rs  duplicate_tests.rs  fingerprint_tests.rs  report_formatter_tests.rs  sanitizer_tests.rs  session_tests.rs  symbolicate_tests.rs
tests/unit/shm/: reader_tests.rs  types_tests.rs
tests/unit/utils/: paths_tests.rs  vm_tags_tests.rs
