[workspace]
resolver = "3"
members = [
    ".",
    "crates/crash_dialog_contract",
    "crates/crash_dialog_macos",
    "crates/crash_dialog_mock",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[package]
name = "crash_monitor"
version.workspace = true
edition.workspace = true
description = "Out-of-process crash monitor for native applications (macOS)"

[lib]
name = "crash_monitor"
path = "src/lib.rs"

[[bin]]
name = "crash_monitor"
path = "src/main.rs"

[lints]
workspace = true

# CRITICAL: Do NOT set panic = "abort" in any profile.
# Cooperative plugin panic isolation depends on catch_unwind (panic = "unwind").
[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[features]
test-support = []

[dependencies]
mach2 = "0.6"
nix = { version = "0.31", features = ["signal", "process", "fs", "mman", "feature", "hostname", "event"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
uuid.workspace = true
clap.workspace = true
base64 = "0.22"
png = "0.17"
plist = "1"
sha2 = "0.10"
addr2line = { version = "0.24", default-features = false, features = ["std", "loader"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"

[build-dependencies]
# Generates the Rust mirror of the C<->Rust shm layout from crash_shm.h (SSOT).
bindgen = "=0.70.1"

[[test]]
name = "shm_round_trip"
path = "tests/integration/shm_round_trip.rs"

[[test]]
name = "shm_validation_failure"
path = "tests/integration/shm_validation_failure.rs"

[[test]]
name = "plugin_timeout"
path = "tests/integration/plugin_timeout.rs"

[[test]]
name = "event_loop_test"
path = "tests/integration/event_loop_test.rs"

[[test]]
name = "capture_isolation_test"
path = "tests/integration/capture_isolation_test.rs"

[[test]]
name = "panic_strategy"
path = "tests/integration/panic_strategy.rs"

[[test]]
name = "e2e_tests"
path = "tests/e2e/e2e_tests.rs"

[[test]]
name = "cli_analyze_test"
path = "tests/integration/cli_analyze_test.rs"

[[test]]
name = "cli_stack_test"
path = "tests/integration/cli_stack_test.rs"

[[test]]
name = "cli_zip_test"
path = "tests/integration/cli_zip_test.rs"

[[test]]
name = "cli_feedback_test"
path = "tests/integration/cli_feedback_test.rs"

[dev-dependencies]
filetime = "0.2"
crash_monitor = { path = ".", features = ["test-support"] }
