[package]
name = "crash-monitor-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Platform-neutral command-line crash report inspection"
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
base64 = "0.22"
clap.workspace = true
crash-report-core = { path = "../crash-report-core" }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "crash-report"
path = "src/main.rs"
