[package]
name = "crash-report-core"
version.workspace = true
edition.workspace = true
description = "Platform-neutral crash report loading and inspection"

[lints]
workspace = true

[dependencies]
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
