[package]
name = "crash-report-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Platform-neutral crash report loading and inspection"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde_json = "1"
zip = { version = "8.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
