[package]
name = "crash_dialog_contract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared command-line and output contract for crash feedback dialogs"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
