[package]
name = "crash_dialog_macos"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "macOS native feedback dialog for crash/snapshot reports"
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "crash_dialog_macos"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSAlert",
    "NSTextField",
    "NSControl",
    "NSView",
    "NSResponder",
    "NSWindow",
    "NSRunningApplication",
] }
