[package]
name = "crash_dialog_macos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "macOS native feedback dialog for crash/snapshot reports"
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "crash_dialog_macos"
path = "src/main.rs"

[[test]]
name = "cli_feedback_test"
path = "../../tests/integration/cli_feedback_test.rs"

[dependencies]
crash_dialog_contract = { path = "../crash_dialog_contract" }
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSAlert",
    "NSTextField",
    "NSControl",
    "NSView",
    "NSResponder",
    "NSWindow",
    "NSRunningApplication",
] }

[dev-dependencies]
crash_monitor = { package = "crash-capture-macos", path = "../..", features = ["test-support"] }
serde_json = "1"
tempfile = "3"
