[package]
name = "crash_dialog_mock"
version.workspace = true
edition.workspace = true
description = "Mock feedback dialog for E2E tests — outputs fixed text, no UI"

[lints]
workspace = true

[[bin]]
name = "crash_dialog_mock"
path = "src/main.rs"

[dependencies]
crash_dialog_contract = { path = "../crash_dialog_contract" }
